etc: 코드 정리